ProTrackDev/force-app/main/default/objects/TR_Related_User_Story__c/TR_Related_User_Story__c.object-meta.xml
<CustomObject>
    <label>Related User Story</label>
    <nameField>
        <displayFormat>RUS-{0000}</displayFormat>
        <label>Related User Story No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>