ProTrackDev/force-app/main/default/objects/TR_Related_User_Story__c/fields/TR_Is_Related_To__c.field-meta.xml
<CustomField>
    <fullName>TR_Is_Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related User Story</inlineHelpText>
    <label>Is Related To</label>
    <referenceTo>TR_User_Story__c</referenceTo>
    <relationshipLabel>User Stories (Is Related To)</relationshipLabel>
    <relationshipName>TR_Related_User_Stories1</relationshipName>
    <type>Lookup</type>
</CustomField>