ProTrackDev/force-app/main/default/objects/TR_Related_User_Story__c/fields/TR_Story_Title_Related_To__c.field-meta.xml
<CustomField>
    <fullName>TR_Story_Title_Related_To__c</fullName>
    <formula>TR_Is_Related_To__r.TR_Story_Title__c</formula>
    <label>Story Title</label>
    <type>Text</type>
</CustomField>