ProTrackDev/force-app/main/default/objects/TR_Related_User_Story__c/fields/TR_User_Story__c.field-meta.xml
<CustomField>
    <fullName>TR_User_Story__c</fullName>
    <label>User Story</label>
    <referenceTo>TR_User_Story__c</referenceTo>
    <relationshipLabel>Related User Stories</relationshipLabel>
    <relationshipName>TR_Related_User_Stories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>